--- a/drones/templates/drones/stimulator.html
+++ b/drones/templates/drones/stimulator.html
@@ -51,9 +51,56 @@ table#t01 th {
     // LATITUDE -18 to -31
     function generateRandomLat() {
         var num = (Math.random()*(31 - 18) + 18).toFixed(3);
-        var posorneg = Math.floor(Math.random());
         return num * -1;
     }
+
+    // Random Bearing from 0 t0 359
+    function generateRandomBearing() {
+        var num = (Math.random()*(359)).toFixed(3);
+        return num;
+    }
+
+    /**
+  * Returns the destination point from a given point, having travelled the given distance
+  * on the given initial bearing.
+  *
+  * @param   {number} lat - initial latitude in decimal degrees (eg. 50.123)
+  * @param   {number} lon - initial longitude in decimal degrees (e.g. -4.321)
+  * @param   {number} distance - Distance travelled (metres).
+  * @param   {number} bearing - Initial bearing (in degrees from north).
+  * @returns {array} destination point as [latitude,longitude] (e.g. [50.123, -4.321])
+  *
+  * @example
+  *     var p = destinationPoint(51.4778, -0.0015, 7794, 300.7); // 51.5135°N, 000.0983°W
+  */
+  function destinationPoint(lat, lon, distance, bearing) {
+     var radius = 6371e3; // (Mean) radius of earth
+
+     var toRadians = function(v) { return v * Math.PI / 180; };
+     var toDegrees = function(v) { return v * 180 / Math.PI; };
+
+     // sinφ2 = sinφ1·cosδ + cosφ1·sinδ·cosθ
+     // tanΔλ = sinθ·sinδ·cosφ1 / cosδ−sinφ1·sinφ2
+     // see mathforum.org/library/drmath/view/52049.html for derivation
+
+     var δ = Number(distance) / radius; // angular distance in radians
+     var θ = toRadians(Number(bearing));
+
+     var φ1 = toRadians(Number(lat));
+     var λ1 = toRadians(Number(lon));
+
+     var sinφ1 = Math.sin(φ1), cosφ1 = Math.cos(φ1);
+     var sinδ = Math.sin(δ), cosδ = Math.cos(δ);
+     var sinθ = Math.sin(θ), cosθ = Math.cos(θ);
+
+     var sinφ2 = sinφ1*cosδ + cosφ1*sinδ*cosθ;
+     var φ2 = Math.asin(sinφ2);
+     var y = sinθ * sinδ * cosφ1;
+     var x = cosδ - sinφ1 * sinφ2;
+     var λ2 = λ1 + Math.atan2(y, x);
+
+     return [toDegrees(φ2), (toDegrees(λ2)+540)%360-180]; // normalise to −180..+180°
+  }
 
 
     var droneSocket = new WebSocket(
@@ -64,6 +111,8 @@ table#t01 th {
         this.id = id;
         this.lat = lat;
         this.long = long;
+        this.speed = 10 //speed in m/s
+        this.bearing = generateRandomBearing()
         this.drone_location = function() {
             return this.id + " : " + this.lat + ", " + this.long;
         };
@@ -78,6 +127,9 @@ table#t01 th {
         var newDrone = new Drone(id, generateRandomLat(), generateRandomLong());
         activeDrones[id] = newDrone
         activeDroneTimers[id] = setInterval(function() {
+            var newCoordinates = destinationPoint(newDrone.lat, newDrone.long, newDrone.speed, newDrone.bearing);
+            newDrone.lat = newCoordinates[0];
+            newDrone.long = newCoordinates[1];
             droneSocket.send(JSON.stringify({
                 'message': newDrone.id + " : " + newDrone.lat + ", " + newDrone.long
             }));
@@ -98,11 +150,16 @@ table#t01 th {
         actionButton.setAttribute('id', newDrone.id)
         actionButton.appendChild(t);
         actionButton.addEventListener("click", function(e) {
-            var currentId = parseInt(e.target.id)
+            var currentId = parseInt(e.target.id);
+
             if (!activeDroneTimers[currentId]) {
                 activeDroneTimers[currentId] = setInterval(function() {
+                                                var currentDrone = activeDrones[currentId];
+                                                var newCoordinates = destinationPoint(currentDrone.lat, currentDrone.long, currentDrone.speed, currentDrone.bearing);
+                                                currentDrone.lat = newCoordinates[0];
+                                                currentDrone.long = newCoordinates[1];
                                                 droneSocket.send(JSON.stringify({
-                                                    'message': currentId + " : " + activeDrones[currentId].lat + ", " + activeDrones[currentId].long
+                                                    'message': currentId + " : " + currentDrone.lat + ", " + currentDrone.long
                                                 }));
                                             }, 1000);
                 this.textContent = "Pause";
