--- a/drones/templates/drones/dashboard.html
+++ b/drones/templates/drones/dashboard.html
@@ -4,9 +4,17 @@
     <meta charset="utf-8"/>
     <title>Dashboard</title>
 </head>
+<style>
+      #map {
+        width: 100%;
+        height: 400px;
+        background-color: grey;
+      }
+</style>
 <body>
-    <button id="drones-location-submit" type="button"/>Send</button>
-</body>
+        <h3>Drone Dashboard</h3>
+    <!--The div element for the map -->
+    <div id="map"></div></body>
 <script>
     var droneSocket = new WebSocket(
         'ws://' + window.location.host +
@@ -22,9 +30,20 @@
         console.error('drone socket closed unexpectedly');
     };
 
-    document.querySelector('#drones-location-submit').onclick = function(e) {
-        droneSocket.send(JSON.stringify({lat : 34, long : 34}));
-    };
+    // Initialize and add the map
+    function initMap() {
+      // The location of Uluru
+      var uluru = {lat: -25.344, lng: 131.036};
+      // The map, centered at Uluru
+      var map = new google.maps.Map(
+          document.getElementById('map'), {zoom: 4, center: uluru});
+      // The marker, positioned at Uluru
+      var marker = new google.maps.Marker({position: uluru, map: map});
+    }
 
+
+</script>
+<script async defer
+    src="https://maps.googleapis.com/maps/api/js?key={{ map_api_key }}&callback=initMap">
 </script>
 </html>
